--- a/ti/main.html
+++ b/ti/main.html
@@ -23,13 +23,16 @@
             <form action="submit">
                 <fieldset>
                     <ul>
-						<li><input id="chkbox28" type="checkbox" name="item" value="Ademar Santiago"       /><label for="chkbox28">Ademar Santiago</label></li> 
+			<li><input id="chkbox28" type="checkbox" name="item" value="Ademar Santiago"       /><label for="chkbox28">Ademar Santiago</label></li> 
                         <li><input id="chkbox24" type="checkbox" name="item" value="Assis Cosme"           /><label for="chkbox24">Assis Cosme</label></li>                
-                        <li><input id="chkbox01" type="checkbox" name="item" value="Caio Denyo"           /><label for="chkbox01">Caio Denyo</label></li>						
-					    <li><input id="chkbox32" type="checkbox" name="item" value="Ilane Maria"           /><label for="chkbox32">Ilane Maria</label></li>               
+                        <li><input id="chkbox01" type="checkbox" name="item" value="Caio Denyo"            /><label for="chkbox01">Caio Denyo</label></li>						
+			<li><input id="chkbox32" type="checkbox" name="item" value="Ilane Maria"           /><label for="chkbox32">Ilane Maria</label></li>               
                         <li><input id="chkbox26" type="checkbox" name="item" value="Jean Fernandes"        /><label for="chkbox26">Jean Fernandes</label></li>					
                         <li><input id="chkbox27" type="checkbox" name="item" value="Katia Kalline"         /><label for="chkbox27">Katia Kalline</label></li> 
-                        <li><input id="chkbox25" type="checkbox" name="item" value="Lázaro Gabriel"        /><label for="chkbox25">Lázaro Gabriel</label></li>    		
+                        <li><input id="chkbox25" type="checkbox" name="item" value="Lázaro Gabriel"        /><label for="chkbox25">Lázaro Gabriel</label></li> 
+			<li><input id="chkbox28" type="checkbox" name="item" value="Edivan Medeiros"       /><label for="chkbox28">Edivan Medeiros</label></li>					
+                        <li><input id="chkbox29" type="checkbox" name="item" value="Janymara"              /><label for="chkbox29">Janymara</label></li> 
+                        <li><input id="chkbox30" type="checkbox" name="item" value="Sheydson"              /><label for="chkbox30">Sheydson</label></li>
 					</ul>
                 </fieldset>
                 <div class="btn">
