--- a/ti/main.html
+++ b/ti/main.html
@@ -33,7 +33,8 @@
 			<li><input id="chkbox28" type="checkbox" name="item" value="Edivan Medeiros"       /><label for="chkbox28">Edivan Medeiros</label></li>					
                         <li><input id="chkbox29" type="checkbox" name="item" value="Janymara"              /><label for="chkbox29">Janymara</label></li> 
                         <li><input id="chkbox30" type="checkbox" name="item" value="Sheydson"              /><label for="chkbox30">Sheydson</label></li>
-					</ul>
+			<li><input id="chkbox31" type="checkbox" name="item" value="Flávio Campelo"        /><label for="chkbox30">Flávio Campelo</label></li>
+		    </ul>
                 </fieldset>
                 <div class="btn">
                     <input class="bton" onclick="sortRandomly()" id="sortear" type="button" name="botao" value="SORTEAR" />
