--- a/contabil/main.html
+++ b/contabil/main.html
@@ -32,7 +32,10 @@
                     </ul>
                 </fieldset>
                 <div class="btn">
-                    <input class="bton" onclick="sortRandomly()" id="sortear" type="button" name="botao" value="SORTEAR" />
+                    <input class="bton" onclick="sortRandomly2()" id="sortear" type="button" name="botao" value="SORTEAR 1 PESSOA" />
+                </div>
+                <div class="btn">
+                    <input class="bton" onclick="sortRandomly()" id="sortear" type="button" name="botao" value="SORTEAR 2 PESSOAS" />
                 </div>
             </form>
         </div>
@@ -42,6 +45,7 @@
     </main>
     <img id="fundo" src="./img/background/main/Fundo_page-0003.png" />
     <script src="./javascript/sort.js"></script>
+    <script src="./javascript/sort2.js"></script>
   
 </body>
 
