--- a/comercial/main.html
+++ b/comercial/main.html
@@ -25,7 +25,7 @@
                     <ul>
 			<li><input id="chkbox01" type="checkbox" name="item" value="ANTÔNIO THEODORO"    /><label for="chkbox01">ANTÔNIO THEODORO</label></li> 
 			<li><input id="chkbox08" type="checkbox" name="item" value="ARTHUR VINICIUS"     /><label for="chkbox08">ARTHUR VINICIUS</label></li>					
-			<li><input id="chkbox04" type="checkbox" name="item" value="CURT LUERDES"        /><label for="chkbox04">CURT LUERDES</label></li>               
+			<li><input id="chkbox04" type="checkbox" name="item" value="CURT LUEDERS"        /><label for="chkbox04">CURT LUERDES</label></li>               
                         <li><input id="chkbox10" type="checkbox" name="item" value="ELIANDRA ALMEIDA"    /><label for="chkbox10">ELIANDRA ALMEIDA</label></li>
                         <li><input id="chkbox05" type="checkbox" name="item" value="JOSÉ RAIMUNDO"       /><label for="chkbox05">JOSÉ RAIMUNDO</label></li>
 			<li><input id="chkbox12" type="checkbox" name="item" value="LUDYMILLA ALVES"     /><label for="chkbox12">LUDYMILLA ALVES</label></li>
