--- a/rh/main.html
+++ b/rh/main.html
@@ -23,12 +23,13 @@
             <form action="submit">
                 <fieldset>
                     <ul>
-			            <li><input id="chkbox01" type="checkbox" name="item" value="Renata Oliveira"    /><label for="chkbox01">Renata Oliveira</label></li> 
-			            <li><input id="chkbox08" type="checkbox" name="item" value="Francicleide Candido"     /><label for="chkbox08">Francicleide Candido</label></li>					
-			            <li><input id="chkbox04" type="checkbox" name="item" value="Juciana Kelly"        /><label for="chkbox04">Juciana Kelly</label></li>               
-                        <li><input id="chkbox10" type="checkbox" name="item" value="Mayara Kelly"    /><label for="chkbox10">Mayara Kelly</label></li>
-                        <li><input id="chkbox05" type="checkbox" name="item" value="Gabriel Marcelino"       /><label for="chkbox05">Gabriel Marcelino</label></li>					
-                    </ul>
+			<li><input id="chkbox01" type="checkbox" name="item" value="Renata Oliveira"          /><label for="chkbox01">Renata Oliveira</label></li> 
+			<li><input id="chkbox02" type="checkbox" name="item" value="Francicleide Candido"     /><label for="chkbox08">Francicleide Candido</label></li>					
+			<li><input id="chkbox03" type="checkbox" name="item" value="Juciana Kelly"            /><label for="chkbox04">Juciana Kelly</label></li>               
+                        <li><input id="chkbox04" type="checkbox" name="item" value="Mayara Kelly"             /><label for="chkbox10">Mayara Kelly</label></li>
+                        <li><input id="chkbox05" type="checkbox" name="item" value="Gabriel Marcelino"        /><label for="chkbox05">Gabriel Marcelino</label></li>					
+                        <li><input id="chkbox06" type="checkbox" name="item" value="Elizete Morais"           /><label for="chkbox05">Elizete Morais</label></li>
+		    </ul>
                 </fieldset>
                 <div class="btn">
                     <input class="bton" onclick="sortRandomly2()" id="sortear" type="button" name="botao" value="SORTEAR 1 PESSOA" />
