--- a/qualidade/main.html
+++ b/qualidade/main.html
@@ -31,7 +31,9 @@
                         <li><input id="chkbox06" type="checkbox" name="item" value="Ítalo"           /><label for="chkbox06">Ítalo</label></li>
                         <li><input id="chkbox07" type="checkbox" name="item" value="José Djeyzon"    /><label for="chkbox07">José Djeyzon</label></li>
                         <li><input id="chkbox08" type="checkbox" name="item" value="Bárbara"         /><label for="chkbox08">Bárbara</label></li>                   
-                    </ul>
+                    <li><input id="chkbox09" type="checkbox" name="item" value="Daniel"         /><label for="chkbox09">Daniel</label></li>
+                        <li><input id="chkbox10" type="checkbox" name="item" value="Edivânio"         /><label for="chkbox10">Edivânio</label></li>
+		    </ul>
                 </fieldset>
                 <div class="btn">
                     <input class="bton" onclick="sortRandomly2()" id="sortear" type="button" name="botao" value="SORTEAR 1 PESSOA" />
