--- a/qualidade/main.html
+++ b/qualidade/main.html
@@ -33,6 +33,10 @@
                         <li><input id="chkbox08" type="checkbox" name="item" value="Bárbara"         /><label for="chkbox08">Bárbara</label></li>                   
                     <li><input id="chkbox09" type="checkbox" name="item" value="Daniel"         /><label for="chkbox09">Daniel</label></li>
                         <li><input id="chkbox10" type="checkbox" name="item" value="Edivânio"         /><label for="chkbox10">Edivânio</label></li>
+			<li><input id="chkbox11" type="checkbox" name="item" value="Welington"         /><label for="chkbox11">Welington</label></li>
+			    <li><input id="chkbox12" type="checkbox" name="item" value="janaine"         /><label for="chkbox12">janaine</label></li>
+			    <li><input id="chkbox13" type="checkbox" name="item" value="Lucas"         /><label for="chkbox12">Lucas</label></li>
+	
 		    </ul>
                 </fieldset>
                 <div class="btn">
