--- a/qualidade/main.html
+++ b/qualidade/main.html
@@ -23,22 +23,30 @@
             <form action="submit">
                 <fieldset>
                     <ul>
-			            <li><input id="chkbox01" type="checkbox" name="item" value="Luciana Cléia"   /><label for="chkbox01">Luciana Cléia</label></li> 
-			            <li><input id="chkbox02" type="checkbox" name="item" value="Daniella"        /><label for="chkbox02">Daniella</label></li>					
-			            <li><input id="chkbox03" type="checkbox" name="item" value="Heytor"          /><label for="chkbox03">Heytor</label></li>               
+			<li><input id="chkbox01" type="checkbox" name="item" value="Luciana Cléia"   /><label for="chkbox01">Luciana Cléia</label></li> 
+			<li><input id="chkbox02" type="checkbox" name="item" value="Daniella"        /><label for="chkbox02">Daniella</label></li>					
+			<li><input id="chkbox03" type="checkbox" name="item" value="Heytor"          /><label for="chkbox03">Heytor</label></li>               
                         <li><input id="chkbox04" type="checkbox" name="item" value="David"           /><label for="chkbox04">David</label></li>
                         <li><input id="chkbox05" type="checkbox" name="item" value="Simone"          /><label for="chkbox05">Simone</label></li>
                         <li><input id="chkbox06" type="checkbox" name="item" value="Ítalo"           /><label for="chkbox06">Ítalo</label></li>
                         <li><input id="chkbox07" type="checkbox" name="item" value="José Djeyzon"    /><label for="chkbox07">José Djeyzon</label></li>
                         <li><input id="chkbox08" type="checkbox" name="item" value="Bárbara"         /><label for="chkbox08">Bárbara</label></li>                   
-                    <li><input id="chkbox09" type="checkbox" name="item" value="Daniel"         /><label for="chkbox09">Daniel</label></li>
-                        <li><input id="chkbox10" type="checkbox" name="item" value="Edivânio"         /><label for="chkbox10">Edivânio</label></li>
-			<li><input id="chkbox11" type="checkbox" name="item" value="Wellington"         /><label for="chkbox11">Wellington</label></li>
-			    <li><input id="chkbox12" type="checkbox" name="item" value="Janaine"         /><label for="chkbox12">Janaine</label></li>
-			    <li><input id="chkbox13" type="checkbox" name="item" value="Lucas"         /><label for="chkbox13">Lucas</label></li>
-	
-		    </ul>
-                </fieldset>
+                        <li><input id="chkbox09" type="checkbox" name="item" value="Daniel"          /><label for="chkbox09">Daniel</label></li>
+			<li><input id="chkbox10" type="checkbox" name="item" value="Edivânio"               /><label for="chkbox10">Edivânio</label></li>
+                     </ul>
+		     <ul>			
+			<li><input id="chkbox11" type="checkbox" name="item" value="Wellington"             /><label for="chkbox11">Wellington</label></li>
+			<li><input id="chkbox12" type="checkbox" name="item" value="Janaine"                /><label for="chkbox12">Janaine</label></li>
+			<li><input id="chkbox13" type="checkbox" name="item" value="Lucas"                  /><label for="chkbox13">Lucas</label></li>
+			<li><input id="chkbox14" type="checkbox" name="item" value="Adriano dos Santos"     /><label for="chkbox14">Adriano dos Santos</label></li> 
+			<li><input id="chkbox15" type="checkbox" name="item" value="Walas Silva Pereira"    /><label for="chkbox15">Walas Silva Pereira</label></li>
+			<li><input id="chkbox16" type="checkbox" name="item" value="Josembergue Florêncio"  /><label for="chkbox16">Josembergue Florêncio</label></li>
+			<li><input id="chkbox17" type="checkbox" name="item" value="Felipe José"            /><label for="chkbox17">Felipe José</label></li>
+			<li><input id="chkbox18" type="checkbox" name="item" value="Eduardo Wesley"         /><label for="chkbox18">Eduardo Wesley</label></li>
+			<li><input id="chkbox19" type="checkbox" name="item" value="Joandson Maik"          /><label for="chkbox19>Joandson Maik</label></li>
+			<li><input id="chkbox20" type="checkbox" name="item" value="Ulysses Gomes"          /><label for="chkbox20">Ulysses Gomes</label></li>
+		     </ul>
+		</fieldset>
                 <div class="btn">
                     <input class="bton" onclick="sortRandomly2()" id="sortear" type="button" name="botao" value="SORTEAR 1 PESSOA" />
                 </div>
