--- a/qualidade/main.html
+++ b/qualidade/main.html
@@ -32,7 +32,7 @@
                         <li><input id="chkbox07" type="checkbox" name="item" value="José Djeyzon"    /><label for="chkbox07">José Djeyzon</label></li>
                         <li><input id="chkbox08" type="checkbox" name="item" value="Bárbara"         /><label for="chkbox08">Bárbara</label></li>                   
                         <li><input id="chkbox09" type="checkbox" name="item" value="Daniel"          /><label for="chkbox09">Daniel</label></li>
-			<li><input id="chkbox10" type="checkbox" name="item" value="Edivânio"               /><label for="chkbox10">Edivânio</label></li>
+			<li><input id="chkbox10" type="checkbox" name="item" value="Edivânio"        /><label for="chkbox10">Edivânio</label></li>
                      </ul>
 		     <ul>			
 			<li><input id="chkbox11" type="checkbox" name="item" value="Wellington"             /><label for="chkbox11">Wellington</label></li>
@@ -43,7 +43,7 @@
 			<li><input id="chkbox16" type="checkbox" name="item" value="Josembergue Florêncio"  /><label for="chkbox16">Josembergue Florêncio</label></li>
 			<li><input id="chkbox17" type="checkbox" name="item" value="Felipe José"            /><label for="chkbox17">Felipe José</label></li>
 			<li><input id="chkbox18" type="checkbox" name="item" value="Eduardo Wesley"         /><label for="chkbox18">Eduardo Wesley</label></li>
-			<li><input id="chkbox19" type="checkbox" name="item" value="Joandson Maik"          /><label for="chkbox19>Joandson Maik</label></li>
+			<li><input id="chkbox19" type="checkbox" name="item" value="Joandson Maik"          /><label for="chkbox19">Joandson Maik</label></li>
 			<li><input id="chkbox20" type="checkbox" name="item" value="Ulysses Gomes"          /><label for="chkbox20">Ulysses Gomes</label></li>
 		     </ul>
 		</fieldset>
