--- a/comercial/main.html
+++ b/comercial/main.html
@@ -24,7 +24,7 @@
                 <fieldset>
                     <ul>
 			<li><input id="chkbox01" type="checkbox" name="item" value="ANTÔNIO THEODORO"    /><label for="chkbox01">ANTÔNIO THEODORO</label></li> 
-			<li><input id="chkbox08" type="checkbox" name="item" value="ARTHUR VINICIUS"     /><label for="chkbox08">ARTHUR VINICIUS</label></li>					
+			<li><input id="chkbox08" type="checkbox" name="item" value="GABRIEL MARCELINO"   /><label for="chkbox08">GABRIEL MARCELINO</label></li>					
 			<li><input id="chkbox04" type="checkbox" name="item" value="CURT LUERDES"        /><label for="chkbox04">CURT LUEDERS</label></li>               
                         <li><input id="chkbox10" type="checkbox" name="item" value="ELIANDRA ALMEIDA"    /><label for="chkbox10">ELIANDRA ALMEIDA</label></li>
                         <li><input id="chkbox05" type="checkbox" name="item" value="JOSÉ RAIMUNDO"       /><label for="chkbox05">JOSÉ RAIMUNDO</label></li>
