--- a/comercial/main.html
+++ b/comercial/main.html
@@ -24,17 +24,18 @@
                 <fieldset>
                     <ul>
 			<li><input id="chkbox01" type="checkbox" name="item" value="ANTÔNIO THEODORO"    /><label for="chkbox01">ANTÔNIO THEODORO</label></li> 
-			<li><input id="chkbox08" type="checkbox" name="item" value="GABRIEL MARCELINO"   /><label for="chkbox08">GABRIEL MARCELINO</label></li>					
-			<li><input id="chkbox04" type="checkbox" name="item" value="CURT LUERDES"        /><label for="chkbox04">CURT LUEDERS</label></li>               
-                        <li><input id="chkbox10" type="checkbox" name="item" value="ELIANDRA ALMEIDA"    /><label for="chkbox10">ELIANDRA ALMEIDA</label></li>
+			<li><input id="chkbox02" type="checkbox" name="item" value="GABRIEL MARCELINO"   /><label for="chkbox02">GABRIEL MARCELINO</label></li>					
+			<li><input id="chkbox03" type="checkbox" name="item" value="CURT LUERDES"        /><label for="chkbox03">CURT LUEDERS</label></li>               
+                        <li><input id="chkbox04" type="checkbox" name="item" value="ELIANDRA ALMEIDA"    /><label for="chkbox04">ELIANDRA ALMEIDA</label></li>
                         <li><input id="chkbox05" type="checkbox" name="item" value="JOSÉ RAIMUNDO"       /><label for="chkbox05">JOSÉ RAIMUNDO</label></li>
-			<li><input id="chkbox12" type="checkbox" name="item" value="LUDYMILLA ALVES"     /><label for="chkbox12">LUDYMILLA ALVES</label></li>
-			<li><input id="chkbox11" type="checkbox" name="item" value="MARCELO BARROS"      /><label for="chkbox11">MARCELO BARROS</label></li>
-                        <li><input id="chkbox02" type="checkbox" name="item" value="MARCELO JOSÉ"        /><label for="chkbox02">MARCELO JOSÉ</label></li>                
-                        <li><input id="chkbox03" type="checkbox" name="item" value="MICHELLE SANTIAGO"   /><label for="chkbox03">MICHELLE SANTIAGO</label></li>						
-                        <li><input id="chkbox06" type="checkbox" name="item" value="RAULISON MONTENEGRO" /><label for="chkbox06">RAULISON MONTENEGRO</label></li> 
-                        <li><input id="chkbox09" type="checkbox" name="item" value="RAYANE SUERDA"       /><label for="chkbox09">RAYANE SUERDA</label></li> 
-                        <li><input id="chkbox07" type="checkbox" name="item" value="THIAGO MEIRELES"     /><label for="chkbox07">THIAGO MEIRELES</label></li> 
+			<li><input id="chkbox06" type="checkbox" name="item" value="LUDYMILLA ALVES"     /><label for="chkbox06">LUDYMILLA ALVES</label></li>
+			<li><input id="chkbox07" type="checkbox" name="item" value="MARCELO BARROS"      /><label for="chkbox07">MARCELO BARROS</label></li>
+                        <li><input id="chkbox08" type="checkbox" name="item" value="MARCELO JOSÉ"        /><label for="chkbox08">MARCELO JOSÉ</label></li> 
+			<li><input id="chkbox09" type="checkbox" name="item" value="MARCELO COSTA"       /><label for="chkbox09">MARCELO COSTA</label></li>   
+                        <li><input id="chkbox10" type="checkbox" name="item" value="MICHELLE SANTIAGO"   /><label for="chkbox10>MICHELLE SANTIAGO</label></li>						
+                        <li><input id="chkbox11" type="checkbox" name="item" value="RAULISON MONTENEGRO" /><label for="chkbox11">RAULISON MONTENEGRO</label></li> 
+                        <li><input id="chkbox12" type="checkbox" name="item" value="RAYANE SUERDA"       /><label for="chkbox12">RAYANE SUERDA</label></li> 
+                        <li><input id="chkbox13" type="checkbox" name="item" value="THIAGO MEIRELES"     /><label for="chkbox13">THIAGO MEIRELES</label></li> 
                     </ul>
                 </fieldset>
                 <div class="btn">
