--- a/comercial/main.html
+++ b/comercial/main.html
@@ -32,7 +32,7 @@
 			<li><input id="chkbox07" type="checkbox" name="item" value="MARCELO BARROS"      /><label for="chkbox07">MARCELO BARROS</label></li>
                         <li><input id="chkbox08" type="checkbox" name="item" value="MARCELO JOSÉ"        /><label for="chkbox08">MARCELO JOSÉ</label></li> 
 			<li><input id="chkbox09" type="checkbox" name="item" value="MARCELO COSTA"       /><label for="chkbox09">MARCELO COSTA</label></li>   
-                        <li><input id="chkbox10" type="checkbox" name="item" value="MICHELLE SANTIAGO"   /><label for="chkbox10>MICHELLE SANTIAGO</label></li>						
+                        <li><input id="chkbox10" type="checkbox" name="item" value="MICHELLE SANTIAGO"   /><label for="chkbox10">MICHELLE SANTIAGO</label></li>						
                         <li><input id="chkbox11" type="checkbox" name="item" value="RAULISON MONTENEGRO" /><label for="chkbox11">RAULISON MONTENEGRO</label></li> 
                         <li><input id="chkbox12" type="checkbox" name="item" value="RAYANE SUERDA"       /><label for="chkbox12">RAYANE SUERDA</label></li> 
                         <li><input id="chkbox13" type="checkbox" name="item" value="THIAGO MEIRELES"     /><label for="chkbox13">THIAGO MEIRELES</label></li> 
